Implement drink editing and image uploading

--- a/www/css/drinKit.less
+++ b/www/css/drinKit.less
@@ -323,7 +323,7 @@ html {
   }
 }
 
-.ingredients-list, .equipment-list, .steps-list {
+.ingredients-list, .equipment-list, .steps-list, .flags-list, .skills-list {
   position: absolute;
   width: 150px;
   height: 100%;
