--- a/www/css/drinKit.css
+++ b/www/css/drinKit.css
@@ -286,19 +286,25 @@ html {
 }
 .ingredients-list,
 .equipment-list,
-.steps-list {
+.steps-list,
+.flags-list,
+.skills-list {
   position: absolute;
   width: 150px;
   height: 100%;
 }
 .ingredients-list p,
 .equipment-list p,
-.steps-list p {
+.steps-list p,
+.flags-list p,
+.skills-list p {
   margin: 5px;
 }
 .ingredients-list .list,
 .equipment-list .list,
-.steps-list .list {
+.steps-list .list,
+.flags-list .list,
+.skills-list .list {
   background-color: rgba(28, 189, 237, 0.25);
   position: absolute;
   top: 30px;
@@ -308,7 +314,9 @@ html {
 }
 .ingredients-list .list .button,
 .equipment-list .list .button,
-.steps-list .list .button {
+.steps-list .list .button,
+.flags-list .list .button,
+.skills-list .list .button {
   display: inline-block;
   width: 48%;
   position: absolute;
@@ -316,12 +324,16 @@ html {
 }
 .ingredients-list .list .button:last-of-type,
 .equipment-list .list .button:last-of-type,
-.steps-list .list .button:last-of-type {
+.steps-list .list .button:last-of-type,
+.flags-list .list .button:last-of-type,
+.skills-list .list .button:last-of-type {
   left: 52%;
 }
 .ingredients-list .item,
 .equipment-list .item,
-.steps-list .item {
+.steps-list .item,
+.flags-list .item,
+.skills-list .item {
   padding: 2px;
   background-image: -webkit-linear-gradient(rgba(45, 206, 254, 0.25), rgba(28, 189, 237, 0.25));
   cursor: default;
