--- a/www/css/drinKit.less
+++ b/www/css/drinKit.less
@@ -205,7 +205,8 @@ html {
   }
 }
 
-.drink-box {
+.item-box {
+  margin: 0;
   a > div {
     @transparency: 25%;
     position: relative;
@@ -256,13 +257,13 @@ html {
   }
 }
 
-.drinks-area {
+.list-area {
   padding: 0 10px 0 10px;
   overflow-y: auto;
   .position(59px, 0, 0);
 }
 
-.drink-header {
+.view-header {
   height: 120px;
   img {
     position: absolute;
@@ -278,7 +279,7 @@ html {
   }
 }
 
-.drink-settings {
+.view-settings {
   @transparency: 25%;
   padding: 10px;
   .position(130px, 5px, 57px, 5px);
@@ -314,7 +315,7 @@ html {
   display: inline-block;
 }
 
-.drink-footer {
+.view-footer {
   position: absolute;
   bottom: 20px;
   right: 20px;
@@ -357,7 +358,7 @@ html {
   display: inline-block;
 }
 
-.new-drink-button {
+.new-item-button {
   height: 100px;
   span {
     font-size: 70px;
@@ -366,4 +367,7 @@ html {
     top: 9px;
     position: relative;
   }
+}
+.skill-item {
+  height: 100px;
 }
